// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`excludeUrlsPatterns should exclude initial page tracking 1`] = `
[
  [
    "enableLinkTracking",
  ],
  [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  [
    "setSiteId",
    "42",
  ],
]
`;

exports[`excludeUrlsPatterns should excluded login.php and token variables 1`] = `
[
  [
    "trackPageView",
  ],
  [
    "enableLinkTracking",
  ],
  [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  [
    "setSiteId",
    "42",
  ],
  [
    "setReferrerUrl",
    "/",
  ],
  [
    "setCustomUrl",
    "/path/to/page.php",
  ],
  [
    "deleteCustomVariables",
    "page",
  ],
  [
    "setDocumentTitle",
    "some page",
  ],
  [
    "trackPageView",
  ],
]
`;

exports[`excludeUrlsPatterns should track initial page if not excluded 1`] = `
[
  [
    "trackPageView",
  ],
  [
    "enableLinkTracking",
  ],
  [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  [
    "setSiteId",
    "42",
  ],
]
`;

exports[`router.routeChangeComplete event should track route as search in /recherche 1`] = `
[
  [
    "setDocumentTitle",
    "search results",
  ],
  [
    "trackSiteSearch",
    "some+query",
  ],
]
`;

exports[`router.routeChangeComplete event should track route as search in /search 1`] = `
[
  [
    "setDocumentTitle",
    "search results",
  ],
  [
    "trackSiteSearch",
    "some+query",
  ],
]
`;

exports[`router.routeChangeComplete event should trackPageView with correct title on route change 1`] = `
[
  [
    "setDocumentTitle",
    "test page",
  ],
  [
    "trackPageView",
  ],
]
`;

exports[`router.routeChangeComplete event should use previousPath as referer on consecutive route change 1`] = `
[
  [
    "setDocumentTitle",
    "test page 2",
  ],
  [
    "trackPageView",
  ],
]
`;
